# pyklip

./: .gitignore  README.md  bitbucket-pipelines.yml  contributors.txt  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pytests.yml
docs/: requirements.txt
docs/source/: bka.rst  conf.py  diskfm_gpi.rst  fm_spect.rst  fmmf.rst  index.rst  install.rst  klip_gpi.rst  kpop_gpi.rst  p1640.rst  planetevidence.rst  rdi.rst  release_notes.rst
docs/source/developing/: coverage.rst  sharing.rst  tests.rst
examples/: Bayesian_KLIP-FM_Astrometry.ipynb  kpop_tutorial.ipynb
pyklip/: NonnegMFJAX.py  empca.py  fakes.py  fitpsf.py  fm.py  klip.py  nmf_imaging.py  nmf_imaging_JAX.py  parallelized.py  rdi.py  spectra_management.py
pyklip/fmlib/: diskfm.py  extractSpec.py  fmpsf.py  matchedFilter.py  nofm.py
pyklip/instruments/: CHARIS.py  GPI.py  Instrument.py  JWST.py  MagAO.py  MagAO_clio.ini  MagAO_clio.py  NIRC2.ini  NIRC2.py  P1640.ini  P1640.py  SPHERE.py  osiris.py
pyklip/instruments/P1640_support/: P1640_cube_checker.py  P1640_cube_checker_interactive.py  P1640contrast.py  P1640cores.py  P1640spots.py  P1640utils.py
pyklip/instruments/utils/: global_centroid.py  nair.py  radonCenter.py
pyklip/kpp/detection/: ROC.py
pyklip/kpp/metrics/: matchedfilter.py
pyklip/kpp/stat/: contrastFMMF.py  stat_utils.py
pyklip/kpp/utils/: mathfunc.py
tests/: test_dataset.py  test_klip_empca.py  test_p1640_tutorial.py  test_parallelized_klip.py  test_radon.py  test_rdi.py  test_zz_diskfm.py
tests/data/: .gitattributes
(+3 files in other folders)
